UHF-9055: Fix navigation visibility on mobile.

--- a/public/themes/custom/hdbt_subtheme/src/scss/03_generic/_base.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/03_generic/_base.scss
@@ -2,7 +2,7 @@
   background: transparent;
 }
 
-.has-section-nav .layout-sidebar-first {
+.has-section-nav .main-content .layout-sidebar-first {
   display: none;
 
   @include breakpoint($breakpoint-l) {
